@@ -1,3 +1,8 @@
+2005-10-16  Andy Sloane <andy@guildsoftware.com>  (tiny change)
+
+	* tramp.el (tramp-enter-password): `tramp-password-end-of-line'
+	must be taken from `tramp-current-hop-*'.
+
 2005-10-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.1.4 released.
